<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#111"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_senha"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app"/>

            <Spinner
                android:id="@+id/app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/app">

            </Spinner>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"/>

            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/senha"/>

            <EditText
                android:id="@+id/senha_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

            <Button
                android:id="@+id/botaoCadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:onClick="cadastrarSenhaOnclick"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
